# valoria-launcher-public

./: .env  .env.development  .prettierrc  generate_icons.py  index.html  package.json  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  publish.yml
public/locales/: en.json  ru.json
src/: main.tsx  openapi.d.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: api.rs  lib.rs  main.rs  server_status.rs  state.rs  system_info.rs
src-tauri/src/bundle/: download.rs  extract.rs  mod.rs
src-tauri/src/metadata/: handler.rs  loader.rs  mod.rs
src-tauri/src/modpacks/: install.rs  list.rs  metadata.rs  mod.rs  run.rs
src/components/: AuthRefresh.tsx  McAvatar.tsx  UpdateBoundary.tsx
src/components/ui/: WindowTitlebar.tsx
src/hooks/: current-modpack.ts  error-capture.ts
src/layout/: ErrorOverlay.tsx  LocaleChange.tsx  MainLayout.tsx
src/lib/api/: index.ts  openapi.json
src/lib/api/hooks/: modpacks.ts
src/lib/ipc/hooks/: app-state.ts  instances.ts  modpack-metadata.ts  modpack-runner.ts  server-status.ts  system-info.ts
src/lib/ipc/types/: app-state.ts  current-task.ts  game-state.ts  modpack-metadata.ts  modpack-optional-file.ts  run-modpack-data.ts  server-status.ts  system-info.ts  task-type.ts
src/pages/: CustomContent.tsx  Home.tsx  Mods.tsx  Profile.tsx  Settings.tsx  SignIn.tsx  Skins.tsx
src/state/: auth.ts  config.ts  error.ts  optional-files.ts
src/styles/: index.css
