[package]
name = "yoosk-launcher"
version = "1.1.4"
description = "Yoosk Launcher"
authors = ["Yoosk"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "yoosk_launcher_lib"
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
portablemc = "5.0.2"
crc32fast = "1.5.0"
reqwest = { version = "0.13.1", default-features = false, features = ["stream", "native-tls", "blocking", "multipart"] }
base64 = "0.22"
zip = "7.2.0"
lzma-rust2 = "0.15.7"
itertools = "0.14.0"
path-slash = "0.2.1"
futures-util = "0.3.28"
sysinfo = "0.38.0"
rust-mc-status = "2.0.0"
tauri-plugin-process = "2"
dunce = "1.0.5"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2.4.0"
tauri-plugin-updater = { version = "2.10.0", default-features = false, features = ["native-tls"] }
